--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,7 @@
 
          <form id="uv-form">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden">
-            <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input">
+            <input id="uv-address" type="text" placeholder="Search Google or URL" class="form__input">
          </form>
 
          <div class="desc">
