--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,7 @@
       <div id="header"></div>
 
       <div id="content">
-         <h1>Skibidi Unblocker!</h1>
+         <h1>Dorian's Unblocker!</h1>
 
          <form id="uv-form">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden">
