--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Skibidi Unblocker</title>
+      <title>New Tab</title>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
       <style>
