--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+ <style>
+    #invisibleButton {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 50px; /* Adjust size as needed */
+      height: 50px;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
+  </style>
+
+<button id="invisibleButton" onclick="blank()"></button>
+
+<script>
+  function blank(){
+    (function () {
+      var url = document.URL;
+      var win = window.open();
+      win.document.body.style.margin = "0";
+      win.document.body.style.height = "100vh";
+      var iframe = win.document.createElement("iframe");
+      iframe.style.border = "none";
+      iframe.style.width = "100%";
+      iframe.style.height = "100%";
+      iframe.style.margin = "0";
+      iframe.referrerpolicy = "no-referrer";
+      iframe.allow = "fullscreen";
+      iframe.src = url.toString();
+      win.document.body.appendChild(iframe);
+    })();
+  }
+</script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>New Tab</title>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
       <style>
