--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
-      width: 500px; /* Adjust size as needed */
+      width: 500px; 
       height: 200px;
       background: transparent;
       border: none;
