--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <title>
+New Tab
+      </title>
  <style>
     #invisibleButton {
       position: fixed;
