--- a/static/index.html
+++ b/static/index.html
@@ -1,2 +1,2 @@
-<h1>Hey sisters I had to take down the unblocker</h1> 
+<h1>Hey sisters I had to delete the unblocker</h1> 
 <h3>Its not coming back sorry</h3>
