--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,1 @@
-<title>Removed</title>
-<h1>Hey sisters I had to delete the unblocker</h1> 
-<h3>Its not coming back sorry</h3>
+<h3>Dinosaurs Before Dark was initially published in 1992 by Mary Pope Osborne, and it is the first of the Magic Tree House books, an educational series that traces two siblings’ adventures through time. This novel shows how they discover the tree house and their first trip to the past, specifically to the Cretaceous Period. Osborne is a prolific children’s book author, having written over 40 novels in this series and co-authored several nonfiction supplements. Her first novel was Run, Run As Fast As You Can (1982), and she has written entries in the Dear America and My America series. She has also been recognized by the National Council of Teachers of English, The Children’s Book Council, and the International Reading Association.</h3>
