--- a/static/index.html
+++ b/static/index.html
@@ -115,7 +115,7 @@ New Tab
       <div id="header"></div>
 
       <div id="content">
-         <h1>Unblocker!</h1>
+         <h1>Unblockify!</h1>
 
          <form id="uv-form">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden">
