--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
             align-items: center;
             min-height: 100vh;
             overflow: hidden;
-            background: linear-gradient(45deg, #01EFAC, #01CBAE, #2082A6, #524094, #562A83);
+            background: linear-gradient(45deg, #BD8950, #EADFC6, #48628D, #314870, #1D2C4B);
             background-size: 300% 300%;
             animation: gradientShift 10s ease infinite;
          }
