--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-        <link rel="icon" type="image/x-icon" href="Logo.png">
+        <link rel="icon" type="image/x-icon" href="static/Logo.png">
       <title>Unblockify!</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
