--- a/static/index.html
+++ b/static/index.html
@@ -74,19 +74,19 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            padding: 10px 20px;
-            background-color: #314870; /* Adjust to match your page style */
+            padding: 15px 30px; /* Increased padding for a larger button */
+            background-color: #314870;
             color: #fff;
             border: none;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             cursor: pointer;
-            font-size: 14px;
+            font-size: 16px; /* Increased font size */
             transition: background-color 0.3s;
          }
 
          #smallButton:hover {
-            background-color: #48628D; /* Darker shade for hover effect */
+            background-color: #48628D;
          }
       </style>
 
