--- a/static/index.html
+++ b/static/index.html
@@ -74,14 +74,15 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            padding: 15px 30px; /* Increased padding for a larger button */
+            padding: 15px 30px;
             background-color: #314870;
             color: #fff;
             border: none;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             cursor: pointer;
-            font-size: 16px; /* Increased font size */
+            font-size: 16px;
+            font-family: 'Oswald', sans-serif; /* Match the title font */
             transition: background-color 0.3s;
          }
 
