--- a/static/index.html
+++ b/static/index.html
@@ -74,20 +74,19 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            padding: 15px 30px;
-            background-color: #314870;
+            padding: 10px 20px;
+            background-color: #314870; /* Adjust to match your page style */
             color: #fff;
             border: none;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             cursor: pointer;
-            font-size: 16px;
-            font-family: 'Oswald', sans-serif; /* Match the title font */
+            font-size: 14px;
             transition: background-color 0.3s;
          }
 
          #smallButton:hover {
-            background-color: #48628D;
+            background-color: #48628D; /* Darker shade for hover effect */
          }
       </style>
 
