--- a/static/testcode.html
+++ b/static/testcode.html
@@ -68,7 +68,7 @@
     <button onclick="invertColors()">Invert Colors</button>
     <button onclick="confettiBlast()">Confetti Blast</button>
     <button onclick="explodeText()">Exploding Text</button>
-    <button onclick="gravityShift()">Gravity Shift</button>
+    <button onclick="gravityShift()">Universal Collapse</button>
     <button onclick="earthquakeMode()">Earthquake Mode</button>
   </div>
 
