--- a/static/testcode.html
+++ b/static/testcode.html
@@ -76,9 +76,8 @@
     <button onclick="flashBang()">Flash Bang</button>
     <button onclick="slowMo()">Slow-Mo Shake</button>
     <button onclick="spinElements()">Spin Everything</button>
-    <button onclick="waveEffect()">Wave Effect</button>
-    <button onclick="cloneChaos()">Clone Chaos</button>
-    <button onclick="randomFont()">Random Font Party</button>
+    <button onclick="cloneChaos()">Random Square Spawn (Spam)</button>
+    <button onclick="randomFont()">Random Font</button>
     <button onclick="laserShow()">Laser Show</button>
   </div>
 
