--- a/static/testcode.html
+++ b/static/testcode.html
@@ -72,7 +72,7 @@
     <button onclick="earthquakeMode()">Earthquake Mode</button>
     <button onclick="matrixMode()">Matrix Mode</button>
     <button onclick="bubbleRise()">Bubble Rise</button>
-    <button onclick="pixelate()">Pixelation Effect</button>
+    <button onclick="pixelate()">Blur Effect</button>
     <button onclick="flashBang()">Flash Bang</button>
     <button onclick="slowMo()">Slow-Mo Shake</button>
     <button onclick="spinElements()">Spin Everything</button>
