--- a/static/testcode.html
+++ b/static/testcode.html
@@ -76,7 +76,7 @@
     <button onclick="flashBang()">Flash Bang</button>
     <button onclick="slowMo()">Slow-Mo Shake</button>
     <button onclick="spinElements()">Spin Everything</button>
-    <button onclick="cloneChaos()">Random Square Spawn (Spam)</button>
+    <button onclick="cloneChaos()">Random Square Spawn</button>
     <button onclick="randomFont()">Random Font</button>
     <button onclick="laserShow()">Laser Show</button>
   </div>
