--- a/static/testcode.html
+++ b/static/testcode.html
@@ -74,10 +74,10 @@
     <button onclick="bubbleRise()">Bubble Rise</button>
     <button onclick="pixelate()">Blur Effect</button>
     <button onclick="flashBang()">Flash Bang</button>
-    <button onclick="slowMo()">Slow-Mo Shake</button>
+    <button onclick="slowMo()">Zoom</button>
     <button onclick="spinElements()">Spin Everything</button>
     <button onclick="cloneChaos()">Random Square Spawn</button>
-    <button onclick="randomFont()">Random Font</button>
+    <button onclick="randomFont()">Zooooooooom</button>
     <button onclick="laserShow()">Laser Show</button>
   </div>
 
