--- a/static/Index.html
+++ b/static/Index.html
@@ -1,9 +1,60 @@
-<h1>I took the website down because yall were being annoying</h1>
-<h3>Alternatives:</h3>
-<p>https://y.bestbfs.org/</p>
-<p>https://t.bestbfs.org/</p>
-<p>https://schoolmxth.vr.lt/</p>
-<p>https://ixldesmoskingdom.unitgrapigs.com/</p>
-<h3>Theres pretty much infinite links on discord tbh just go on there</h3>
-<p>One of the good servers is https://discord.gg/Nsx6ASBu</p>
-<p>Theres tons more too</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Alternatives</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: #000;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        h1, h3 {
+            margin: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 1rem;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        p {
+            margin: 0.5rem 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>I took the website down because y'all were being annoying</h1>
+    </header>
+    <div class="container">
+        <h3>Alternatives:</h3>
+        <p><a href="https://y.bestbfs.org/" target="_blank">https://y.bestbfs.org/</a></p>
+        <p><a href="https://t.bestbfs.org/" target="_blank">https://t.bestbfs.org/</a></p>
+        <p><a href="https://schoolmxth.vr.lt/" target="_blank">https://schoolmxth.vr.lt/</a></p>
+        <p><a href="https://ixldesmoskingdom.unitgrapigs.com/" target="_blank">https://ixldesmoskingdom.unitgrapigs.com/</a></p>
+        <h3>There’s pretty much infinite links on Discord tbh just go on there</h3>
+        <p>One of the good servers is <a href="https://discord.gg/Nsx6ASBu" target="_blank">https://discord.gg/Nsx6ASBu</a></p>
+        <p>There’s tons more too</p>
+    </div>
+</body>
+</html>
