--- a/static/Index.html
+++ b/static/Index.html
@@ -6,7 +6,7 @@
     <title>Website Alternatives</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -14,13 +14,17 @@
             line-height: 1.6;
         }
         header {
-            background: #000;
-            color: #fff;
-            padding: 1rem 0;
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
+            color: white;
+            padding: 1.5rem 0;
             text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        h1, h3 {
+        header h1 {
             margin: 0;
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: 1px;
         }
         .container {
             max-width: 800px;
@@ -30,9 +34,14 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
+        h3 {
+            margin-top: 0;
+            color: #444;
+        }
         a {
             color: #0066cc;
             text-decoration: none;
+            font-weight: 500;
         }
         a:hover {
             text-decoration: underline;
@@ -44,7 +53,7 @@
 </head>
 <body>
     <header>
-        <h1>I took the website down because y'all were being annoying</h1>
+        <h1>I Took the Website Down Because Y'all Were Being Annoying</h1>
     </header>
     <div class="container">
         <h3>Alternatives:</h3>
