--- a/static/Index.html
+++ b/static/Index.html
@@ -14,11 +14,12 @@
             line-height: 1.6;
         }
         header {
-            background: linear-gradient(90deg, #6a11cb, #2575fc);
+            background-color: #222;
             color: white;
             padding: 1.5rem 0;
             text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Clear shadow for depth */
+            position: relative;
         }
         header h1 {
             margin: 0;
@@ -61,7 +62,7 @@
         <p><a href="https://t.bestbfs.org/" target="_blank">https://t.bestbfs.org/</a></p>
         <p><a href="https://schoolmxth.vr.lt/" target="_blank">https://schoolmxth.vr.lt/</a></p>
         <p><a href="https://ixldesmoskingdom.unitgrapigs.com/" target="_blank">https://ixldesmoskingdom.unitgrapigs.com/</a></p>
-        <h3>There’s pretty much infinite links on Discord tbh just go on there</h3>
+        <h3>There’s pretty much infinite links on Discord tbh just go on there:</h3>
         <p>One of the good servers is <a href="https://discord.gg/Nsx6ASBu" target="_blank">https://discord.gg/Nsx6ASBu</a></p>
         <p>There’s tons more too</p>
     </div>
