--- a/static/Index.html
+++ b/static/Index.html
@@ -18,7 +18,7 @@
             color: white;
             padding: 1.5rem 0;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Clear shadow for depth */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
             position: relative;
         }
         header h1 {
