--- a/static/Index.html
+++ b/static/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Alternatives</title>
+    <title>Shut Down, Will Not Come Back.</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -65,6 +65,7 @@
         <h3>There’s pretty much infinite links on Discord tbh just go on there:</h3>
         <p>One of the good servers is <a href="https://discord.gg/Nsx6ASBu" target="_blank">https://discord.gg/Nsx6ASBu</a></p>
         <p>There’s tons more too</p>
+        <h2>The websites not coming back up please dont ask me</h2>
     </div>
 </body>
 </html>
