--- a/static/Index.html
+++ b/static/Index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <header>
-        <h1>I Took the Website Down Because Y'all Were Being Annoying</h1>
+        <h1>I Took the Website Down Because Y'all Were Too Loud</h1>
     </header>
     <div class="container">
         <h3>Alternatives:</h3>
