--- a/static/Index.html
+++ b/static/Index.html
@@ -66,6 +66,7 @@
         <p>One of the good servers is <a href="https://discord.gg/Nsx6ASBu" target="_blank">https://discord.gg/Nsx6ASBu</a></p>
         <p>There’s tons more too</p>
         <h2>The websites not coming back up please dont ask me</h2>
+        <p>The reason I took it down in the first place is because a ton of yall would talk to me about it DIRECTLY IN FRONT OF THE TEACHERS</p>
     </div>
 </body>
 </html>
