--- a/static/Index.html
+++ b/static/Index.html
@@ -67,6 +67,8 @@
         <p>There’s tons more too</p>
         <h2>The websites not coming back up please dont ask me</h2>
         <p>The reason I took it down in the first place is because a ton of yall would talk to me about it DIRECTLY IN FRONT OF THE TEACHERS</p>
+                <p>I get that its my fault for having my name on it at first but I took it off for a reason like come on bro</p>
+
     </div>
 </body>
 </html>
